; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_update_composition_hint.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_update_composition_hint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_2__*, %struct.vo_x11_state* }
%struct.TYPE_2__ = type { i32 }
%struct.vo_x11_state = type { i32, i32, i32 }

@_NET_WM_BYPASS_COMPOSITOR = common dso_local global i32 0, align 4
@XA_CARDINAL = common dso_local global i32 0, align 4
@PropModeReplace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @vo_x11_update_composition_hint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vo_x11_update_composition_hint(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.vo_x11_state*, align 8
  %4 = alloca i64, align 8
  store %struct.vo* %0, %struct.vo** %2, align 8
  %5 = load %struct.vo*, %struct.vo** %2, align 8
  %6 = getelementptr inbounds %struct.vo, %struct.vo* %5, i32 0, i32 1
  %7 = load %struct.vo_x11_state*, %struct.vo_x11_state** %6, align 8
  store %struct.vo_x11_state* %7, %struct.vo_x11_state** %3, align 8
  store i64 0, i64* %4, align 8
  %8 = load %struct.vo*, %struct.vo** %2, align 8
  %9 = getelementptr inbounds %struct.vo, %struct.vo* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %24 [
    i32 0, label %13
    i32 1, label %14
    i32 2, label %15
    i32 3, label %23
  ]

13:                                               ; preds = %1
  store i64 0, i64* %4, align 8
  br label %24

14:                                               ; preds = %1
  store i64 1, i64* %4, align 8
  br label %24

15:                                               ; preds = %1
  %16 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %17 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 1, i32 0
  %22 = sext i32 %21 to i64
  store i64 %22, i64* %4, align 8
  br label %24

23:                                               ; preds = %1
  store i64 2, i64* %4, align 8
  br label %24

24:                                               ; preds = %1, %23, %15, %14, %13
  %25 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %26 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %29 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %32 = load i32, i32* @_NET_WM_BYPASS_COMPOSITOR, align 4
  %33 = call i32 @XA(%struct.vo_x11_state* %31, i32 %32)
  %34 = load i32, i32* @XA_CARDINAL, align 4
  %35 = load i32, i32* @PropModeReplace, align 4
  %36 = bitcast i64* %4 to i8*
  %37 = call i32 @XChangeProperty(i32 %27, i32 %30, i32 %33, i32 %34, i32 32, i32 %35, i8* %36, i32 1)
  ret void
}

declare dso_local i32 @XChangeProperty(i32, i32, i32, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @XA(%struct.vo_x11_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
